添加 语音识别模块

--- a/FloatingActionButton/src/main/AndroidManifest.xml
+++ b/FloatingActionButton/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <!-- 访问网络，网络定位需要上网 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -28,8 +30,17 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <!-- 开机广播 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    //语音识别
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
 
     <application
+        android:name=".base.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -39,6 +50,20 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="kIfWAEUylfTcs4pfDAchxxDugdzCYGjI" />
+
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="10473876" />
+        <meta-data
+            android:name="com.baidu.speech.API_KEY"
+            android:value="1DmeU09QoZZPAwQo6iIGdo7o" />
+        <meta-data
+            android:name="com.baidu.speech.SECRET_KEY"
+            android:value="Qw64R7AGFZa77UiD4DaOMGnBFGAUhW6c" />
+        <service
+            android:name="com.baidu.speech.VoiceRecognitionService"
+            android:exported="false" />
+
         //定位
         <service
             android:name="com.baidu.location.f"
@@ -52,6 +77,10 @@
         <service
             android:name=".service.MonitorService"
             android:process=":push" />
+        //录音
+        <service android:name=".service.PhoneService"
+            android:process=":push"/>
+
         //开机receiver
         <receiver
             android:name=".broadcast.BootCompleteReceiver"
@@ -102,6 +131,17 @@
             android:launchMode="singleTop" />
         <activity android:name=".DialerActivity" />
         <activity android:name=".DataStorageActivity"></activity>
+        <activity
+            android:name=".ActivityMiniRecog"
+            android:configChanges="orientation|keyboardHidden|screenLayout"
+            android:label="精简版识别"
+            android:theme="@style/MsgAppTheme"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
