--- a/FloatingActionButton/build.gradle
+++ b/FloatingActionButton/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
     //汉子转拼音
     compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/bdasr_V3_20170929_c8984af.jar')
 }
