--- a/FloatingActionButton/build.gradle
+++ b/FloatingActionButton/build.gradle
@@ -13,6 +13,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -25,28 +26,30 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    //retrofit 2.0
+    //rxjava
+    //加载图片
+    //图表
+    //加载百度地图SDK jar包
+    compile files('libs/BaiduLBS_Android.jar')
+    //底部导航栏
+    //汉子转拼音
+    compile files('libs/pinyin4j-2.5.0.jar')
+    compile files('libs/bdasr_V3_20170929_c8984af.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.leon:lfilepickerlibrary:1.4.0'
-    //retrofit 2.0
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    //rxjava
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'io.reactivex:rxandroid:1.2.0'
-    //加载图片
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    testCompile 'junit:junit:4.12'
-    //图表
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
-    //加载百度地图SDK jar包
-    compile files('libs/BaiduLBS_Android.jar')
-    //底部导航栏
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.1'
-    //汉子转拼音
-    compile files('libs/pinyin4j-2.5.0.jar')
-    compile files('libs/bdasr_V3_20170929_c8984af.jar')
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
