--- a/FloatingActionButton/build.gradle
+++ b/FloatingActionButton/build.gradle
@@ -10,7 +10,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -50,4 +49,5 @@ dependencies {
     compile files('libs/pinyin4j-2.5.0.jar')
     //语音识别
     compile files('libs/bdasr_V3_20170929_c8984af.jar')
+    compile files('libs/commons-net-3.3.jar')
 }
