--- a/FloatingActionButton/src/main/AndroidManifest.xml
+++ b/FloatingActionButton/src/main/AndroidManifest.xml
@@ -128,7 +128,7 @@
         <activity android:name=".DialerActivity" />
         <activity android:name=".DataStorageActivity" />
 
-        <!--语音唤醒-->
+        <!-- 语音唤醒 -->
         <activity
             android:name=".ActivityMiniWakeUp"
             android:configChanges="orientation|keyboardHidden|screenLayout"
@@ -137,10 +137,11 @@
             android:theme="@style/MsgAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--语音识别-->
+        <!-- 语音识别 -->
         <activity
             android:name=".ActivityMiniRecog"
             android:configChanges="orientation|keyboardHidden|screenLayout"
@@ -149,10 +150,11 @@
             android:theme="@style/MsgAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-        <!--唤醒后识别-->
+        <!-- 唤醒后识别 -->
         <activity
             android:name=".baiduyuyin.ActivityWakeUpRecog"
             android:configChanges="orientation|keyboardHidden|screenLayout"
@@ -161,16 +163,20 @@
             android:theme="@style/MsgAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="com.baidu.speech.recognizerdemo.intent.category.SAMPLE_CODE" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SettingsActivity"
             android:label="设置"
             android:theme="@style/MsgAppTheme" />
+        <activity android:name=".ThreeLevelMenuActivity" />
 
-        <activity android:name=".ThreeLevelMenuActivity"></activity>
+        <service
+            android:name=".baiduyuyin.WakeUpRecogService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
