--- a/FloatingActionButton/src/main/AndroidManifest.xml
+++ b/FloatingActionButton/src/main/AndroidManifest.xml
@@ -176,7 +176,9 @@
         <service
             android:name=".baiduyuyin.WakeUpRecogService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".MediaActivity"></activity>
     </application>
 
 </manifest>
